syntax = "proto2";
package raft_serverpb;

import "raftpb.proto";
import "metapb.proto";

enum MessageType {
  MsgNone         = 0;
  MsgCommand      = 1;
  MsgCommandResp  = 2;
  MsgRaft         = 3;
}

message Message {
  optional MessageType          type      = 1;  
  optional RaftCommandRequest   cmd_req   = 2;
  optional RaftCommandResponse  cmd_resp  = 3;
  optional RaftMessage          raft      = 4;
}


message RaftMessage {
  optional int64 range_id           = 1;
  optional metapb.Peer from_peer    = 2;
  optional metapb.Peer to_peer      = 3;
  optional uint64 msg_id            = 4;
  optional raftpb.Message message   = 5;
}

// ConfChangeContext is encoded in the raftpb.ConfChange.Context field.
message ConfChangeContext {
  optional uint64 msg_id        = 1;
  optional metapb.Peer peer     = 2;
}

message RaftCommandRequest {
  
}

message RaftCommandResponse {
  
}